--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,107 +1,63 @@
-ansible-base==2.10.8
-apache-libcloud==3.2.0
-argcomplete==1.8.1
-asgiref==3.7.2
-attrs==23.1.0
-Babel==2.8.0
-blinker==1.8.2
-boto3==1.34.151
-botocore==1.34.151
-certifi==2023.5.7
-chardet==3.0.4
-charset-normalizer==3.1.0
-click==8.1.4
-cloudinary==1.38.0
-colorama==0.4.6
-command-not-found==0.3
-coreapi==2.3.3
-coreschema==0.0.4
-cryptography==3.4.8
-dbus-python==1.2.18
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-Django==4.2.2
-django-cors-headers==4.1.0
-django-database-url==1.0.3
-django-rest-passwordreset==1.3.0
-django-rest-swagger==2.2.0
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-dnspython==2.1.0
-drf-yasg==1.21.6
-elastic-transport==8.13.1
-elasticsearch==7.17.9
-Faker==37.1.0
-Flask==1.1.2
-gunicorn==21.2.0
-httplib2==0.20.2
-idna==3.4
-importlib-metadata==4.6.4
-inflection==0.5.1
-itsdangerous==2.2.0
-itypes==1.2.0
-jeepney==0.7.1
-Jinja2==3.1.2
-jmespath==0.10.0
-jsonschema==4.17.3
-kafka-python==2.1.5
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lockfile==0.12.2
-MarkupSafe==2.1.3
-more-itertools==8.10.0
-netaddr==0.8.0
-netifaces==0.11.0
-ntlm-auth==1.4.0
-oauthlib==3.2.0
-openapi-codec==1.3.2
-packaging==23.1
-pathspec==0.12.1
-Pillow==10.0.0
-psycopg2==2.9.9
-pycodestyle==2.11.1
-pycryptodome==3.18.0
-pycryptodomex==3.11.0
-Pygments==2.11.2
-PyGObject==3.42.1
-PyJWT==2.8.0
-pykerberos==1.1.14
-pyparsing==2.4.7
-pyrsistent==0.19.3
-python-apt==2.4.0+ubuntu3
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-pytz==2023.3
-pywinrm==0.3.0
-PyYAML==6.0.1
-rave-python==1.4.0
-requests==2.31.0
-requests-kerberos==0.12.0
-requests-ntlm==1.1.0
-requests-toolbelt==0.9.1
-s3transfer==0.10.2
-SecretStorage==3.3.1
-selinux==3.3
-simplejson==3.19.1
-six==1.16.0
-sqlparse==0.4.4
-ssh-import-id==5.11
-swagger-spec-validator==3.0.3
-systemd-python==234
-typing_extensions==4.6.3
-tzdata==2024.1
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-uritemplate==4.1.1
-urllib3==2.0.3
-vcversioner==2.16.0.0
-wadllib==1.3.6
-Werkzeug==3.0.3
-whitenoise==6.5.0
-xmltodict==0.12.0
-yamllint==1.37.1
-zipp==1.0.0
-zope.interface==6.0
+annotated-types==0.7.0
+anyio==4.10.0
+bitarray==3.6.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
+ckzg==2.1.1
+click==8.2.1
+cytoolz==1.0.1
+dnspython==2.7.0
+email_validator==2.2.0
+eth-account==0.13.7
+eth-hash==0.7.1
+eth-keyfile==0.8.1
+eth-keys==0.7.0
+eth-rlp==2.2.0
+eth-typing==5.2.1
+eth-utils==5.3.0
+eth_abi==5.2.0
+exceptiongroup==1.3.0
+fastapi==0.116.1
+fastapi-cli==0.0.8
+fastapi-cloud-cli==0.1.5
+h11==0.16.0
+hexbytes==1.3.1
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+hyperliquid-python-sdk==0.18.0
+idna==3.10
+Jinja2==3.1.6
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+msgpack==1.1.1
+parsimonious==0.10.0
+pycryptodome==3.23.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+pymongo==4.14.0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+PyYAML==6.0.2
+regex==2025.7.34
+requests==2.32.4
+rich==14.1.0
+rich-toolkit==0.15.0
+rignore==0.6.4
+rlp==4.1.0
+sentry-sdk==2.34.1
+shellingham==1.5.4
+sniffio==1.3.1
+starlette==0.47.2
+toolz==1.0.0
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+urllib3==2.5.0
+uvicorn==0.35.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websocket-client==1.8.0
+websockets==15.0.1
